# apollo-rtc-sdk2.0

./: BUILD.gn  DEPS  README.md
demo_ios/apollo_client/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
demo_mac/cplusplus/: main.cc
demo_mac/objc/: APPDemoViewController.h  APPDemoViewController.m  APPMacDemoDelegate.h  APPMacDemoDelegate.m  RTCDemoClient.h  RTCDemoClient.mm  main.m
demo_mac/objc/device/: APPCaptureController.h  APPCaptureController.m  APPSettingsModel+Private.h  APPSettingsModel.h  APPSettingsModel.m  APPSettingsStore.h  APPSettingsStore.m
interface/: apollo_engine_interface.h  apollo_types.h
src/: apollo_engine_impl.cc  apollo_engine_impl.h  apollo_engine_impl_internal.cc  apollo_engine_impl_test.cc  apollo_internal_types.h  apollo_packet_transport.cc  apollo_packet_transport.h
